--- a/runtimes/universal/Dockerfile
+++ b/runtimes/universal/Dockerfile
@@ -27,11 +27,12 @@ WORKDIR /app
 # Copy the required packages from the monorepo (lightweight server only)
 # Note: This Dockerfile should be run from the repo root: docker build -f server/Dockerfile .
 COPY config/ ./config/
+COPY common/ ./common/
 COPY rag/schema.yaml ./rag/schema.yaml
 
 # Install config dependencies including dev dependencies for datamodel generation
-RUN ls -la config
 RUN cd config && uv sync --locked --all-extras --verbose
+RUN cd common && uv sync --locked --all-extras --verbose
 
 # Generate config schema and datamodel types
 RUN cd config && ./generate-types.sh
@@ -49,8 +50,8 @@ RUN cd runtimes/universal && uv sync --locked --verbose \
 # Copy universal runtime source code
 COPY runtimes/universal/ ./runtimes/universal/
 
-# Expose port
-EXPOSE 8000
+# Expose port (default is 11540, can be overridden with LF_RUNTIME_PORT env var)
+EXPOSE 11540
 
 # Change to /tmp so any runtime files are created in writable location
 WORKDIR /tmp
