--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -30,10 +30,10 @@ WORKDIR /app
 # Copy the required packages from the monorepo (lightweight server only)
 # Note: This Dockerfile should be run from the repo root: docker build -f server/Dockerfile .
 COPY config/ ./config/
+COPY common/ ./common/
 COPY rag/schema.yaml ./rag/schema.yaml
 
 # Install config dependencies including dev dependencies for datamodel generation
-RUN ls -la config
 RUN cd config && uv sync --locked --all-extras --verbose
 
 # Generate config schema and datamodel types
