--- a/config/templates/advanced.yaml
+++ b/config/templates/advanced.yaml
@@ -53,17 +53,10 @@ rag:
   # =============================================================================
   databases:
     # Main vector database for general documents
-    # Uses ChromaDB client-server mode to prevent multi-process write conflicts
-    # When running with Docker Compose, connects to the chromadb-server service
-    # For local development, you can use persist_directory instead of host/port
     - name: "main_database"
       type: "ChromaStore"
       config:
-        # Client-server mode (recommended for production/Docker)
-        host: "chromadb-server"  # Docker service name, or "localhost" for local server
-        port: 8000
-        # Persistent mode (for local development only - comment out host/port above)
-        # persist_directory: "./data/chroma_db"
+        persist_directory: "./data/chroma_db"
         distance_function: "cosine"
         collection_name: "documents"
       # Default strategies for this database
@@ -137,10 +130,7 @@ rag:
       type: "ChromaStore"
       config:
         # Client-server mode (shares same ChromaDB server as main_database)
-        host: "chromadb-server"  # Docker service name, or "localhost" for local server
-        port: 8000
-        # Persistent mode (for local development only - comment out host/port above)
-        # persist_directory: "./data/research_db"
+        persist_directory: "./data/research_db"
         distance_function: "cosine"
         collection_name: "research_papers"  # Different collection name for isolation
       default_embedding_strategy: "research_embeddings"
