--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["api", "core", "agents", "services", "background"]
+packages = ["api", "core", "agents", "services"]
 
 [tool.hatch.metadata]
 allow-direct-references = true
@@ -32,16 +32,16 @@ dependencies = [
   "structlog>=25.4.0",
   "asgi-correlation-id>=4.3.4",
   "atomic-agents==2.1.0",
-  "jsonref>=1.1.0", # Can be removed since it's now in config
+  "jsonref>=1.1.0",             # Can be removed since it's now in config
   "celery>=5.5.3",
   # Configuration parsing
   "pyyaml>=6.0.0", # Can be removed since it's now in config
   # Fix dotenv parsing
   "python-dotenv>=1.0.0",
   "llamafarm-config",
+  "llamafarm-common",
   "types-requests>=2.31.0.6",
   "fastapi-mcp>=0.4.0",
-  "mcp>=1.2.0",
   "ollama>=0.6.0",
   "huggingface-hub>=1.0.1",
 ]
@@ -77,6 +77,7 @@ exclude = ["migrations", ".venv", "venv", "build", "dist"]
 
 [tool.uv.sources]
 llamafarm-config = { path = "../config", editable = true }
+llamafarm-common = { path = "../common", editable = true }
 
 # Optional: treat warnings as errors
 # force-exclude = true
