Add MCP to seed project and handle add better tool calling (#388)
* chore: refactor agent interface to use openai chat completions

* fix(cli): fix viewport scrolling and streaming issues

* feat(cli): render tool calls

* feat: update chat completions prompting

* chore: rename to PromptSet and PromptMessage

* chore(server): incremental updates

* chore: revert some changes

* chore(server): add mcp to project seed

* chore(server): update tests

* chore(server): remove AGENTS.md for now

* chore(server): address comments

* chore(rag): remove titles in schema

* chore(server): fix tests

--- a/server/seeds/project_seed/llamafarm.yaml
+++ b/server/seeds/project_seed/llamafarm.yaml
@@ -57,3 +57,9 @@ prompts:
               - Configuration: editing `llamafarm.yaml`
 
               Ask me anything about LlamaFarm, or type `/help` for chat commands!
+
+mcp:
+  servers:
+    - name: llamafarm-server
+      transport: http
+      base_url: http://localhost:8000/mcp
