chore(release): fix release pack

--- a/.github/workflows/release-cli.yml
+++ b/.github/workflows/release-cli.yml
@@ -225,6 +225,19 @@ jobs:
       - name: Install Nx CLI
         run: npm install -g nx && nx init --useDotNxInstallation --interactive=false
 
+      - name: Set up Go
+        uses: actions/setup-go@v5
+        with:
+          go-version: "1.24.4"
+          cache-dependency-path: cli/go.sum
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+        with:
+          enable-cache: true
+          cache-dependency-glob: "**/uv.lock"
+          python-version: "3.12"
+
       - name: Build designer
         run: |
           cd designer
@@ -240,7 +253,7 @@ jobs:
         run: |
           VERSION=${{ steps.version.outputs.version }} nx pack
 
-      - name: Upload source archive
+      - name: Upload distribution archive
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.version.outputs.version }}
