chore: add pre-commit hook to validate and fix python code using ruff (#412)
* chore: add pre-commit hook to validate and fix python code using ruff

* chore: address pr comments

* chore: update uv lock files

* chore: address pr comments

* chore: fix build issue

--- a/config/pyproject.toml
+++ b/config/pyproject.toml
@@ -27,25 +27,22 @@ dev = [
   "pytest>=7.0.0",
   "pytest-cov>=4.0.0",
   "mypy>=1.0.0",
-  "ruff>=0.12.7",
+  "ruff>=0.14.3",
   "jsonref>=1.1.0",
 ]
 
 [project.scripts]
 generate-types = "config.generate_types:main"
 
+# Ruff configuration is shared across all Python components
+# See ../ruff.toml for the actual configuration
+
 [tool.ruff]
-line-length = 100
-target-version = "py311"
+# Import shared configuration
+extend = "../ruff.toml"
 
-# Enable auto-fixes
-fix = true
-
-# Select rulesets (examples: E for pycodestyle, F for pyflakes, I for isort, B for bugbear)
-lint.select = ["E", "F", "I", "B", "UP", "SIM"]
-
-# Exclude some files
-exclude = ["migrations", ".venv", "venv", "build", "dist", "datamodel.py"]
+# Component-specific exclusions (in addition to shared config)
+extend-exclude = ["datamodel.py"] # Generated file
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
