--- a/rag/pyproject.toml
+++ b/rag/pyproject.toml
@@ -335,50 +335,15 @@ dev-dependencies = [
 llamafarm-config = { path = "../config", editable = true }
 llamafarm-common = { path = "../common", editable = true }
 
+# Ruff configuration is shared across all Python components
+# See ../ruff.toml for the actual configuration
+
 [tool.ruff]
-target-version = "py39"
-line-length = 88
-select = [
-  "E",  # pycodestyle errors
-  "W",  # pycodestyle warnings
-  "F",  # pyflakes
-  "I",  # isort
-  "B",  # flake8-bugbear
-  "C4", # flake8-comprehensions
-  "UP", # pyupgrade
-]
-ignore = [
-  "E501", # line too long, handled by black
-  "B008", # do not perform function calls in argument defaults
-  "C901", # too complex
-]
-exclude = [
-  ".bzr",
-  ".direnv",
-  ".eggs",
-  ".git",
-  ".hg",
-  ".mypy_cache",
-  ".nox",
-  ".pants.d",
-  ".ruff_cache",
-  ".svn",
-  ".tox",
-  ".venv",
-  "__pypackages__",
-  "_build",
-  "buck-out",
-  "build",
-  "dist",
-  "node_modules",
-  "venv",
-  "rag_env",
-  "chroma_db",
-]
+# Import shared configuration
+extend = "../ruff.toml"
 
-[tool.ruff.per-file-ignores]
-"__init__.py" = ["F401"]
-"test_*.py" = ["D100", "D101", "D102", "D103", "D104"]
-
-[tool.ruff.mccabe]
-max-complexity = 10
+# Component-specific exclusions (in addition to shared config)
+extend-exclude = [
+  "rag_env",   # RAG virtual environment
+  "chroma_db", # ChromaDB data directory
+]
