--- a/designer/package.json
+++ b/designer/package.json
@@ -54,6 +54,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "husky": "^9.1.7",
     "json-schema-to-typescript": "^15.0.4",
+    "patch-package": "^8.0.0",
     "postcss": "^8.4.32",
     "prettier": "^3.1.1",
     "rollup-plugin-visualizer": "^6.0.3",
