fix(cli): upgrades may fail on unix-like environments (#453)
* fix(cli): upgrades may fail on unix-link environments

* chore: pr fixups

* fix(cli): ensure services restart after upgrade

* fix(cli): interactive chat command is broken

* chore: test fixups

* feat(cli): support stream cancellation w/ esc

* chore: var cleanup

* chore: defensive cancellation

* chore: cli upgrade tweaks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,12 @@ jobs:
           go build ./tools/coverreport
           ./coverreport -in coverage.out -format=markdown > coverage.md
 
+      - name: Run binary upgrade integration tests
+        working-directory: cli
+        run: |
+          # Run Go-based integration tests
+          go test -v -run TestUpgradeIntegration ./cmd/version/...
+
       - name: Publish CLI coverage to job summary
         run: |
           {
