--- a/server/seeds/project_seed/llamafarm.yaml
+++ b/server/seeds/project_seed/llamafarm.yaml
@@ -10,6 +10,30 @@ runtime:
       description: "Default Universal model for LlamaFarm"
       provider: universal
       model: Qwen/Qwen3-1.7B
+      tools:
+        - type: function
+          name: cli.dataset_upload
+          description: Upload a file to the dataset
+          parameters:
+            type: object
+            required:
+              - filepath
+              - namespace
+              - project
+              - dataset
+            properties:
+              namespace:
+                type: string
+                description: The namespace of the dataset
+              project:
+                type: string
+                description: The project of the dataset
+              dataset:
+                type: string
+                description: The dataset of the dataset
+              filepath:
+                type: string
+                description: The path to the file to upload
 
 prompts:
   - name: default
@@ -62,7 +86,3 @@ mcp:
     - name: llamafarm-server
       transport: http
       base_url: http://localhost:8000/mcp
-    - name: hackernews
-      transport: stdio
-      command: uvx
-      args: [mcp-hn]
